added color support and customization for time seporator

--- a/config.yml
+++ b/config.yml
@@ -1,14 +1,15 @@
 SaveTimer: 200
+TimeSeporator ' : '
 KillBeforeText: 'Number of kills: '
-KillAfterText: '.'
+KillAfterText: '. '
 TimeBeforeText: 'Time played: '
-TimeAfterText: '.'
+TimeAfterText: '. '
 BlockPlaceBeforeText: 'Blocks placed: '
-BlockPlaceAfterText: '.'
+BlockPlaceAfterText: '. '
 BlockBreakBeforeText: 'Blocks broken: '
-BlockBreakAfterText: '.'
+BlockBreakAfterText: '. '
 JoinBeforeText: 'Number of joins: '
-JoinAfterText: '.'
+JoinAfterText: '. '
 PVPDeathBeforeText: 'Number of PVP deaths: '
-PVPDeathAfterText: '.'
-PlayerNotFound: 'That user was either incorrect or has not played here.'
+PVPDeathAfterText: '. '
+PlayerNotFound: 'That user was either incorrect or has not played here. '
