Added death counter, corrected chat color compatibility, release build v0.0.1.2

--- a/config.yml
+++ b/config.yml
@@ -12,4 +12,6 @@ JoinBeforeText: 'Number of joins: '
 JoinAfterText: '. '
 PVPDeathBeforeText: 'Number of PVP deaths: '
 PVPDeathAfterText: '. '
+DeathBeforeText: 'Number of deaths: '
+DeathAfterText: '. '
 PlayerNotFound: 'That user was either incorrect or has not played here. '
