--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: FunWithNumbers
-version: 0.0.1.2
+version: 1.0.0.0r1-SNAPSHOT
 description: The goal of this plugin is to handle player stats.
 author: pyropyro78
 main: com.pyromanticgaming.funwithnumbers.FunWithNumbers
