update for Jenkins

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,6 @@
 name: FunWithNumbers
 version: 1.0.0.0r1-SNAPSHOT
+api-version: 1.15
 description: The goal of this plugin is to handle player stats.
 author: pyropyro78
 main: com.pyromanticgaming.funwithnumbers.FunWithNumbers
